Fix серво и буфферизация для камеры

--- a/RovUI-linux/RovSettings.ini
+++ b/RovUI-linux/RovSettings.ini
@@ -1,10 +1,18 @@
 [Joystick]
-JoystickAxisZ=7
+JoystickAxisW=0
+JoystickAxisWIsInv=false
+JoystickAxisY=0
+JoystickAxisYIsInv=false
+JoystickAxisZ=0
 JoystickAxisZIsInv=false
 JoystickCloseButton=5
-JoystickManipulatorAxis=4
+JoystickManipulatorAxis=0
 JoystickManipulatorAxisInv=false
-JoystickServoYAxis=0
+JoystickServoXAxis=5
+JoystickServoXAxisInv=false
+JoystickServoYAxis=4
 JoystickServoYAxisInv=false
+JoystickServoZAxis=7
+JoystickServoZAxisInv=false
 fiftyButton=2
 twentyFiveButton=3
