Lazer and pump btn

--- a/RovUI-linux/RovSettings.ini
+++ b/RovUI-linux/RovSettings.ini
@@ -8,6 +8,7 @@ JoystickAxisZIsInv=false
 JoystickCloseButton=5
 JoystickManipulatorAxis=0
 JoystickManipulatorAxisInv=false
+JoystickPumpButton=1
 JoystickServoXAxis=5
 JoystickServoXAxisInv=false
 JoystickServoYAxis=4
