--- a/RovUI-linux/RovSettings.ini
+++ b/RovUI-linux/RovSettings.ini
@@ -5,15 +5,17 @@ JoystickAxisY=0
 JoystickAxisYIsInv=false
 JoystickAxisZ=0
 JoystickAxisZIsInv=false
-JoystickCloseButton=5
+JoystickCloseButton=21
+JoystickLazerButton=1
 JoystickManipulatorAxis=0
 JoystickManipulatorAxisInv=false
-JoystickPumpButton=1
+JoystickPumpButton=5
 JoystickServoXAxis=5
 JoystickServoXAxisInv=false
 JoystickServoYAxis=4
 JoystickServoYAxisInv=false
 JoystickServoZAxis=7
 JoystickServoZAxisInv=false
-fiftyButton=2
+JoystickStopButton=0
+fiftyButton=13
 twentyFiveButton=3
